删除不再使用的目标文件和依赖文件，更新结构体定义和文件操作声明

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "structure.h": "c",
         "stdio.h": "c",
-        "fileoperaions.h": "c"
+        "fileoperaions.h": "c",
+        "receivedpackage.h": "c"
     }
 }
